--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,9 +12,9 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/home/denys/workspace/hardware/esp32/examples/esp32-tflite-intro/.pio/build/esp32dev/firmware.elf",
+            "executable": "/home/denys/hardware/esp32/examples/esp32-tflite-intro/.pio/build/esp32dev/firmware.elf",
             "projectEnvName": "esp32dev",
-            "toolchainBinDir": "/home/denys/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch2/bin",
+            "toolchainBinDir": "/home/denys/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
@@ -25,18 +25,18 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/home/denys/workspace/hardware/esp32/examples/esp32-tflite-intro/.pio/build/esp32dev/firmware.elf",
+            "executable": "/home/denys/hardware/esp32/examples/esp32-tflite-intro/.pio/build/esp32dev/firmware.elf",
             "projectEnvName": "esp32dev",
-            "toolchainBinDir": "/home/denys/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch2/bin",
+            "toolchainBinDir": "/home/denys/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "/home/denys/workspace/hardware/esp32/examples/esp32-tflite-intro/.pio/build/esp32dev/firmware.elf",
+            "executable": "/home/denys/hardware/esp32/examples/esp32-tflite-intro/.pio/build/esp32dev/firmware.elf",
             "projectEnvName": "esp32dev",
-            "toolchainBinDir": "/home/denys/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch2/bin",
+            "toolchainBinDir": "/home/denys/.platformio/packages/toolchain-xtensa-esp32/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
         }
