--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,61 @@
-model/*.tflite
-model/.ipynb_checkpoints
+#
+# Covers CLion
+#
 
-components/esp-nn
-components/tflite-lib
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+.idea/**/contentModel.xml
 
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+#
+# Covers PlatformIO
+#
+.pioenvs
+.piolibdeps
+.clang_complete
+.gcc-flags.json
 .pio
+.history
+sdkconfig.*
+!sdkconfig.defaults
+dependencies.*
+
+#
+# Covers VS Code
+#
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
-!.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
 
-# Local History for Visual Studio Code
-.history/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
 
-# Built Visual Studio Code Extensions
-*.vsix
+# Exclude model training artifacts
+model/*.tflite
+model/.ipynb_checkpoints
