add monitor options

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env]
+monitor_port = /dev/ttyUSB?
+monitor_speed = 115200
+
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
