--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,5 +5,5 @@ FILE(GLOB_RECURSE app_sources ${CMAKE_SOURCE_DIR}/src/*.*)
 
 idf_component_register(
     SRCS ${app_sources}
-    PRIV_REQUIRES tflite-lib esp_hw_support
+    PRIV_REQUIRES esp-tflite-micro esp_hw_support
 )
